# WUI_boundary

./: .gitignore  AGENTS.md  CHANGELOG.md  PROJECT_CONTEXT.md  README.md  mkdocs.yml  package.json  playwright.config.ts  pyproject.toml  requirements.txt
.github/workflows/: boundary-scaling-demo.yml  pages.yml  playwright-site-review.yml
codex/skills/site-review/: SKILL.md
data/processed/boulder_county_co/: build_metadata.json  sample_wui_boundary.geojson
docs/: examples.md  fire-science-implications.md  implications-for-remote-sensing.md  index.md  interactive-experiments.md  measurement-problem.md  methods-reproducibility.md  project-roadmap.md  real-data-experiments.md  references.md  reproducible-prompts.md  scaling-results.md  visual-figures.md  what-counts-as-wui-boundary.md  why-length-depends-on-scale.md
docs/analytics/: minimal-demo.md  scaffold.md
docs/stylesheets/: extra.css
docs/ui-drafts/: draft-1.md  draft-2.md  roadmap-to-real-data.md
outputs/minimal_demo/: run_summary.md
outputs/qa/: playwright-site-audit-2026-03-07.md
scripts/: build_sample_wui_boundary.py  download_sample_data.py  pre_pr_site_review.sh  run_minimal_boundary_scaling.py  run_minimal_demo.py  run_real_boundary_scaling.py  run_streaming_wui_scaling.py
src/boundary_analytics/: __init__.py  datasets.py  definitions.py  measurement.py  reporting.py  scaling.py  streaming_wui.py
tests/: test_scaffold.py  test_streaming_script.py
tests/browser/: homepage.spec.ts  interactive-experiments.spec.ts  scaling-results.spec.ts  site-smoke.spec.ts  utils.ts
(+7 files in other folders)
