[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wui-boundary"
version = "0.1.0"
description = "Scale-conditioned WUI boundary analytics and narrative website"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.32",
    "numpy>=1.26",
    "pandas>=2.2",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "shapely>=2.0",
    "pyproj>=3.6",
    "rasterio>=1.3",
    "pyogrio>=0.9",
    "geopandas>=0.14",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
